css/main.css
body{
    background: linear-gradient(to right, rgba(230, 234, 175, 0.931),rgba(238, 252, 47, 0.5));
    text-align: justify;
    font-family: 'Roboto', sans-serif;
}

ul li{
    list-style: none;
    padding: 10px;
    display: inline-flex;
}

header {
    position: relative;
    top: 20px;
    text-align: center;
    padding-bottom: 25px;
    text-decoration: underline;
    color: rgba(42, 112, 113, 0.907);
}

h2 {
    color: rgba(42, 112, 113, 0.907);
}

h3 {
    color: rgba(49, 56, 176, 0.907);
    font-style: italic;
    text-decoration: underline;
}

ol {
    text-align: left;
    list-style: circle;
}

img[src^="images/"] {
    border: 1px solid rgba(75, 74, 74, 0.731);
}

#chicken-picture {
    display: flex;
    justify-content: center;
    width: auto;
}

#cornbeef-picture {
    display: flex;
    justify-content: center;
    width: auto;
}

#pasta-picture {
    display: flex;
    justify-content: center;
    width: auto;
}

